fix even more styling and allow the console to have horizontal scroll for readability and explorability

--- a/src/html_src/style.css
+++ b/src/html_src/style.css
@@ -289,7 +289,8 @@ h1 {
     background-color: var(--bg-dark);
     border: 2px solid var(--border);
     border-radius: 8px 8px 0 0;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: auto;
     box-sizing: border-box;
     margin-bottom: 0;
     z-index: 1;
@@ -297,6 +298,7 @@ h1 {
     margin-top: calc(
         1em + 1em
     ); /* Match the tab row height: 1em font-size + 2*0.5em padding */
+    white-space: nowrap;
 }
 .serverSTDIn {
     width: 100%;
@@ -379,6 +381,7 @@ h1 {
     background-color: transparent;
     padding-top: 2px;
     padding-bottom: 2px;
+    white-space: pre;
 }
 .ConfigEditor {
     position: absolute;
